--- a/WFormProjects/WFormP/UserReg/StudentReg/StudentReg/StudentReg.csproj
+++ b/WFormProjects/WFormP/UserReg/StudentReg/StudentReg/StudentReg.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{71A0A333-5E12-403A-8C39-A3A220016AF4}</ProjectGuid>
+    <ProjectGuid>{1F92240A-1A8A-49C1-910F-70080B1A5C7D}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WFormP</RootNamespace>
-    <AssemblyName>WFormP</AssemblyName>
+    <RootNamespace>StudentReg</RootNamespace>
+    <AssemblyName>StudentReg</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
