--- a/WFormProjects/WFormP/UserReg/sqlForm/sqlForm/App.config
+++ b/WFormProjects/WFormP/UserReg/sqlForm/sqlForm/App.config
@@ -15,6 +15,6 @@
         </providers>
     </entityFramework>
   <connectionStrings>
-    <add name="TestDBEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=TestDB;persist security info=True;user id=sa;password=mindfire@1;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="TestDBEntities" connectionString="metadata=res://*/DBModel.csdl|res://*/DBModel.ssdl|res://*/DBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=TestDB;persist security info=True;user id=sa;password=mindfire@1;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
